; ModuleID = '/home/carl/AnghaBench/libuv/src/unix/extr_sysinfo-memory.c_uv_get_total_memory.c'
source_filename = "/home/carl/AnghaBench/libuv/src/unix/extr_sysinfo-memory.c_uv_get_total_memory.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sysinfo = type { i32, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @uv_get_total_memory() #0 {
  %1 = alloca i32, align 4
  %2 = alloca %struct.sysinfo, align 8
  %3 = call i64 @sysinfo(%struct.sysinfo* %2)
  %4 = icmp eq i64 %3, 0
  br i1 %4, label %5, label %12

5:                                                ; preds = %0
  %6 = getelementptr inbounds %struct.sysinfo, %struct.sysinfo* %2, i32 0, i32 1
  %7 = load i64, i64* %6, align 8
  %8 = trunc i64 %7 to i32
  %9 = getelementptr inbounds %struct.sysinfo, %struct.sysinfo* %2, i32 0, i32 0
  %10 = load i32, i32* %9, align 8
  %11 = mul nsw i32 %8, %10
  store i32 %11, i32* %1, align 4
  br label %13

12:                                               ; preds = %0
  store i32 0, i32* %1, align 4
  br label %13

13:                                               ; preds = %12, %5
  %14 = load i32, i32* %1, align 4
  ret i32 %14
}

declare dso_local i64 @sysinfo(%struct.sysinfo*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
